--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 website:
   site-url: nyandwi.com
-  title: "Nyandwi"
+  title: "Jean Nyandwi"
   search: false
   google-analytics: "G-W0PE5HT9JD"
   navbar:
