--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,8 @@ website:
         href: teaching.qmd
       - text: "Resources"
         href: resources.qmd
+      - text: "Misc"
+        href: misc.qmd
       - icon: github
         href: https://github.com/Nyandwi
       - icon: twitter
